# rustmlprefetch

./: Cargo.toml  README.md
benches/: prefetcher_benchmark.rs
examples/: async_prefetch.rs  basic_usage.rs
src/: lib.rs  main.rs  prefetcher.rs
tests/: prefetcher_tests.rs
