[package]
name = "ml-prefetcher"
version = "0.1.1"
edition = "2021"
authors = ["Ronan Takizawa"]
description = "A machine learning based prefetcher for predicting access patterns"
license = "MIT"
repository = "https://github.com/ronantakizawa/rustmlprefetch"
keywords = ["prefetch", "memory", "ml", "optimization", "pattern-matching"]
categories = ["caching", "algorithms"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
num-traits = "0.2"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "rt", "macros"] }
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "prefetcher_benchmark"
harness = false

[lib]
name = "ml_prefetcher"
path = "src/lib.rs"

[[example]]
name = "async_prefetch"
path = "examples/async_prefetch.rs"